--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
       <div class="row">
         <div class="colum">
-          <input type="text" name="display" class="input-box">
+          <input type="text" name="display" class="input-box" placeholder="enter value">
         </div>
         <div class="colum1">
           <input type="button" value="AC" onclick="display.value = '' 
